src/grafana-loki-common/local/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  type: LoadBalancer
  selector:
    app: loki
  ports:
    - name: http
      port: 4050
      targetPort: 3100
